_assets/stylesheets/brewhouse.css.scss
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  background: #f6f6f6;
}
html.blog {
  background: #f0f0f0;

  a:hover,
  a:focus,
  a:active {
    text-decoration: underline;
  }
}
body {
  border-top: 2px solid #42CCEE;
  color: #7B7F83;
  font-size: 15px;
  line-height: 1.5em;
}

a {
  color: #47A4C2;
  word-wrap: break-word;
}
a:hover, a:focus {
  color: #F39914;
  text-decoration: none;
  outline: 0;
}
a:hover {
  text-decoration: none;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'bh_proxima', sans-serif;
}

h1 {
  @media (max-width: 767px) {
    font-size: 26px;
  }
}

h2 {
  @media (max-width: 769px) {
    font-size: 16px;
  }
}

h3 {
  color: #444;
  font-size: 36px;
  margin: 20px auto 40px;
  text-transform: uppercase;

  @media (max-width: 769px) {
    font-size: 29px;
    margin-bottom: 15px;
  }
}
// To get the site out the door, remove this when redesigning / refactoring
h3.header-small {
  font-size: 26px;
  margin-top: 50px;
}

h4 {
  color: #444;
  font-size: 22px;
  display: block;
}

hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 2px solid #333;
}


.navbar-main {
  background: #fff;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  height: 63px;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1000;

  #brewhouse-logo {
    display: none;
  }
  .navbar-brand {
    margin-top: 7px;
    padding: 0;
  }
  #navbar-links {
    font-family: 'Lato', sans-serif;
    font-size: 18px;
    font-weight: 300;
    text-transform: lowercase;

    li {
      margin-left: 12px;

      &:first-child {
        margin-left: 0;
      }
    }
    a {
      -webkit-transition: all 0.15s ease-in-out;
      -moz-transition: all 0.15s ease-in-out;
      transition: all 0.15s ease-in-out;

      border-radius: 0;
      color: #888;
      line-height: 9px;
      padding: 27px 22px 24px;
    }

    .highlight-link {
      a {
        color: #000;
      }
    }
  }

  // Philippe and I decided to forego using Boostrap's column system
  // to do this and set it up manually
  .navbar-inner-wrapper {
    @media (min-width: 1230px) {
      margin: 0 auto;
      width: 1230px;
    }
    @media (max-width: 1230px) {
      margin: 0 auto;
      width: 95%;
    }
  }
  .logo-container {
    @media (max-width: 767px) {
      margin: 0 auto;
      width: 200px;
    }
  }
}

#navbar-main {
  -webkit-transition: background 0.15s ease-in;
  -moz-transition: background 0.15s ease-in;
  transition: background 0.15s ease-in;
}

#navbar-main.sticky {
  background: #47A4C2;
  background: rgba(71, 164, 194, 0.95);
  left: 0;
  position: fixed;
  top: 0;

  #brewhouse-logo {
    display: block;
  }
  #navbar-links {
    a {
      border-bottom: 0 solid #fff;
      color: #fff;
      display:block;

      &:hover {
        border-bottom-width: 3px;
      }
    }

    .highlight-link {
      a {
        color: #fff;
      }
    }
  }
}

// Bootstrap Overrides:
div.container {
  padding-left: 0;
  padding-right: 0;
}

div.main {
  background: #fff;
  overflow: hidden;
  position: relative;
}
.main {
  @media screen and (min-width: 768px) and (max-width: 1280px) {
    width: 100%;
  }
}

#banner {
  padding-top: 110px;
  padding-bottom: 130px;
  text-transform: uppercase;

  img.img-responsive {
    margin: 0 auto;
  }

  h1 {
    color: #263646;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 45px;
    letter-spacing: 2px;
    margin: 0 auto 20px;

    a {
      color: #263646;

      &:hover {
        color: #263646;
      }
    }
  }
  h2 {
    background: #FF6813;
    background: rgb(255, 104, 19);
    color: #FFE296;
    font-size: 19px;
    height: 55px;
    letter-spacing: 1px;
    margin: 0 auto;
    padding: 9px 5px 6px;
    position: relative;
    width: 98%;

    a {
      color: #F8DCC9;

      &:hover {
        color: #fff;
      }
    }

    @media (min-width: 770px) {
      font-size: 26px;
      padding-top: 16px;
    }
    @media (min-width: 1050px) {
      font-size: 37px;
      padding-top: 9px;
    }

    .arrow-tip-container {
      display: block;
      height: 55px;
      overflow: hidden;
      position: absolute;
      top: 0px;
      right: -55px;
      width: 55px;
    }
    .arrow-tip {
      -webkit-transform: rotate(45deg) skew(10deg, 10deg);

      display: block;
      height: 55px;
      margin: 0 0 0 -39px;
      width: 55px;
    }
    .arrow-tip-grad {
      background: #FF6813;
      background: rgb(255, 104, 19);
      display: block;
      width: 100%;
      height: 100%;
    }
  }
  em {
    color: #fff;
    font-style: normal;
  }
}
.learn-more {
  color: #ccc;
  display: block;
  font-size: 13px;
  margin: 20px 0;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}
.learn-more.button {
  color: #32BFDA;
  border: 1px solid #32BFDA;
  padding: 10px 20px;
  text-align: center;
  width: 50%;

  &:hover {
    -webkit-transition: all 0.15s ease-in-out;
    -moz-transition: all 0.15s ease-in-out;
    transition: all 0.15s ease-in-out;

    color: #F39914;
  }
}

.content {
  margin: 100px auto;
  width: 80%;

  @media (max-width: 500px) {
    margin: 45px auto 35px auto;
  }
}

// Hack for small screen sizes to show taller shots
@media (max-width: 767px) {
  .img-full-width {
    width: 200%;
    margin-left: -50%;
  }
  #community .img-full-width {
    margin-left: -6%;
  }
}

.icon-black-circle {
  background: #28292B;
  border-radius: 100px;
  height: 75px;
  margin-bottom: 20px;
  padding: 13px;
  width: 75px;
}
.icon-black-circle-network {
  padding-left: 15px;
  padding-top: 15px;
}

#team {
  .team-member-name {
    display: block;
    font-size: 18px;
    font-family: 'bh_proxima', sans-serif;
    margin: 20px auto 30px;
    color: #555;

    @media (max-width: 782px) {
      font-size: 12px;
    }
  }
  .social-buttons {
    display: inline;
    margin-left: 0.4em;

    @media (max-width: 782px) {
      display: inline block;
      position: relative;
      float: right;
    }
  }
}

#services {
  h4 {
    margin-bottom: 10px;
  }
}

#projects {
  ul {
    color: #999;
    list-style: none;
    margin: 20px 0 20px 0;
    padding-left: 0;

    li {
      background: transparent url(/images/chemex-small.png) no-repeat scroll left center;
      margin-bottom: 6px;
      padding-top: 1px;
      text-indent: 18px;
    }
  }

  #client-logos {
    margin-top: 30px;

    div.client-logo {
      border: 1px solid #F5EFEF;
      padding-top: 28px;
      height: 120px;
      margin-bottom: 30px;
    }
    img#medeo-logo {
      padding-top: 16px;
    }
    img#perch-logo {
      padding-top: 12px;
    }
    img#go-free-range-logo {
      margin-top: -16px;
    }
    img#steamclock-logo {
      margin-top: 10px;
    }
  }

  .project {
    border: 1px solid #F5EFEF;
    padding: 20px;
  }

  .project-logo {
    display: block;
    height: 60px;
    vertical-align: middle;

    img {
      height: 30px;
    }

    img#caliper-logo {
      height: 32px;
    }

    img#yciitu-logo {
      height: 38px;
    }
  }
}

#privacy-policy-section {
  padding:80px 0;
  h2 {
    font-size: 24px;
  }
  p {
    line-height: 1.7em;
  }
}


.map {
  background: #fafafa url("/images/vancouver-old-map.jpg") no-repeat scroll right top;
  height: 449px;
  padding: 0;
  margin: 0;
}

.map-inner {
  width: 84%;
}

.contact-details {
  background-color: rgba(255,255,255,0.95);
  height: 449px;
  float: right;
  display: block;
  padding: 20px;
  width: 230px;
}

.telephone {
  color: #7B7F83;
}

// BLOG SPECIFIC
.post {
  margin: 0 0 60px 0;

  h1, h2, h3 {
    color: #3a3a3a;
  }
  li, p, blockquote {
    font-family: Georgia,Cambria,"Times New Roman",Times,serif;
    font-size: 18px;
    line-height: 33px;
  }
  blockquote {
    color: #999;
  }
  p {
    margin-bottom: 25px;
  }
  ul, ol {
    margin-bottom: 25px;
  }
  .social-actions {
    margin-top: 10px;
    float: right;
  }
  .img-author {
    margin: 5px 10px 5px 0;
  }
}
#navbar-blog {
  background: transparent;
  left: 10px;
  margin-bottom: 0;
  position: fixed;
  top: 2px;

  @media (max-width: 767px) {
    display: none;
  }

  #brewhouse-logo {
    display: block;

    img {
      height: 55px;
    }
  }
}
.highlight {
  pre, code {
    background-color: #1d1f21;
  }
  pre {
    margin-bottom: 30px;
  }
}
#banner-blog {
  overflow: hidden;

  a {
    color: #76D6F5;

    &:hover {
      color: #18C3FA;
      text-decoration: none;
    }
  }
  img {
    -webkit-transition: margin-top 0.05s ease-in-out;
    -moz-transition: margin-top 0.05s ease-in-out;
    transition: margin-top 0.05s ease-in-out;
  }
  section {
    background-image: linear-gradient(bottom, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0) 100%);
    background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0) 100%);
    background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0) 100%);
    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0) 100%);
    background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0) 100%);
    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(0, 0, 0, 0.85)), color-stop(1, rgba(0, 0, 0, 0)));

    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;

    h1 {
      color: #fff;
      margin-left: 5%;
      margin-bottom: 0.5%;
      margin-top: 28%;
    }

    h3 {
      color: #fff;
      font-size: 20px;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      font-weight: 100;
      letter-spacing: 0.05em;
      margin-left: 5%;
      margin-top: 0;
      text-transform: initial;
    }
  }

  @media (max-width: 767px) {
    height: 170px;

    img {
      display: block;
      height: auto;
      max-width: 100%;
    }
    section {
      height: 80%;

      h1 {
        margin-left: 31%;
        margin-top: 6.5%;
      }
      h3 {
        -webkit-font-smoothing: antialiased;
        font-size: 14px;
        font-weight: 300;
        line-height: 1.5;
        margin-left: 31%;
        margin-top: 0;
        width: 39%;
      }
    }
  }
}

.mailchimp-form {
  margin: 10px;
  padding: 10px;
  border: solid 1px #ddd;
  background: #eee;

  .subscribe-button {
    padding-top: 4px;
  }
}

// END BLOG SPECIFIC

footer {
  color: #bbb;
  font-size: 14px;
  padding: 30px 0 60px;
  text-align: center;

  a {
    color: #bbb;
  }
}

